[package]
name = "api"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-files = "0.6"
actix-rt = "2.6"
actix-service = "2.0"
actix-web = "4.6"
futures-util = "0.3"
jsonwebtoken = "8.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

